--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - HTTP_PORT=8091
     ports:
       - 8091:8091
+    volumes:
+      - ./api-gateway:/app
 
   poc-tcp-backend:
     container_name: poc-tcp-backend
@@ -38,6 +40,8 @@ services:
     ports:
       - 8089:8089
       - 3002:3002
+    volumes:
+      - ./backend:/app
 
   poc-tcp-frontend:
     container_name: poc-tcp-frontend
